# constraint-synth

./: AGENT.md  IMPLEMENTATION_SUMMARY.md  README.md  SYNERGY-BRIDGE.md  demo_30sec.py  demo_pipeline.py  pyproject.toml  quickstart.sh
constraint_synth/: __init__.py  consonance_field.py  constraint_filter.py  dawdreamer_backend.py  dial_space.py  envelope.py  flux_bridge.py  harmony.py  innovation_cycle.py  lattice.py  midi_renderer.py  mutation.py  neural.py  oscillator.py  perception.py  play_along.py  playback.py  quality_effects.py  rhythmic_consonance.py  scales.py  sound_engine.py  synth.py  three_halves.py
constraint_synth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
demos/: demo_three_halves.py
docs/: DEVELOPER-GUIDE.md  USER-GUIDE.md
examples/: demo_render_midi.py  demo_synth.py  play_along_demo.py
memory/: JOURNAL.md
tests/: test_dawdreamer_backend.py  test_dial_space.py  test_flux_bridge.py  test_harmony.py  test_innovation.py  test_mutation.py  test_play_along.py  test_playback.py  test_quality_effects.py  test_scales_and_field.py  test_synth.py  test_three_halves.py
