[project]
name = "constraint-synth"
version = "0.1.0"
description = "Constraint-theory synthesizer prototype — waveshape as lattice geometry"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
