[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-synth"
version = "0.4.0"
description = "Constraint-theory synthesizer — lattice geometry waveshaping, play-along AI, 27 world scales, consonance field, just-intonation ratios"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
